# Task-Tracker-CLI

./: .gitignore  CMakeLists.txt  README.md
include/Functions/: take_number.h  take_string.h
include/Modifiers/: delete.h  update.h
include/Status/: mark-done.h  mark-in-progress.h
include/Task/: done.h  in-progress.h  task.h  todo.h
src/: task-cli.cpp
src/Functions/: take_number.cpp  take_string.cpp
src/Modifiers/: add.cpp  delete.cpp  update.cpp
src/Status/: mark-done.cpp  mark-in-progress.cpp
src/Task/: done.cpp  in-progress.cpp  list.cpp  saveJson.json  task.cpp  todo.cpp
